hotfix: align 'the end' correctly in longform template and switch contentWidth tokens back to rem units, beceuse ch was causing issues

--- a/shared/styles/tokens/contentWidth.css
+++ b/shared/styles/tokens/contentWidth.css
@@ -1,7 +1,7 @@
 body {
 	/* Use ch units for narrower widths, b/c these are typically for type */
-	--content-width-narrow: 50ch;
-	--content-width-default: 70ch;
+	--content-width-narrow: 36rem;
+	--content-width-default: 48rem;
 
 	/* Use rem units for larger widths
 	 * -> more predictable, and these typically wrap graphics instead of type
